--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 
 <div class="container">
 
-  <h1>AI Studio</h1>
+  <h1>AI Studio</h1><span style="
+  font-family: 'Orbitron', 'Arial', sans-serif;
+  font-size: 14px;
+  letter-spacing: 2px;
+  color: #00f7ff;
+  text-shadow: 0 0 5px rgba(0,247,255,0.6);
+">
+  Crafted by Sachin Adi
+</span>
 
   <input type="text" id="prompt" placeholder="Enter your prompt...">
 
@@ -27,3 +35,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
