--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div class="container">
 
   <h1>AI Studio</h1>
-  <span>By sachin Adi</span>
-
+  <span style="font-family: 'Orbitron', 'Arial', sans-serif;font-size: 14px;letter-spacing: 2px;color: #00f7ff;text-shadow: 0 0 5px rgba(0,247,255,0.6);">By sachin Adi</span>
+<br>
   <input type="text" id="prompt" placeholder="Enter your prompt...">
 
   <div class="buttons">
@@ -28,5 +28,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
