--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="buttons">
     <button onclick="generateText()">Text</button>
-    
+    <button onclick="generateImage()">Image</button>
   </div>
 
   <div id="loader" class="loader hidden"></div>
@@ -27,6 +27,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
